--- a/quartus/altde2-115/hello.qsf
+++ b/quartus/altde2-115/hello.qsf
@@ -2,29 +2,61 @@
 set_global_assignment -name FAMILY "Cyclone IV E"
 set_global_assignment -name DEVICE EP4CE115F29C7
 
-set_global_assignment -name TOP_LEVEL_ENTITY Hello
-set_global_assignment -name VERILOG_FILE ../../Hello.v
+set_global_assignment -name TOP_LEVEL_ENTITY vgadriver_top
 
 set_global_assignment -name VERILOG_MACRO "SYNTHESIS=<None>"
 
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name USE_CONFIGURATION_DEVICE OFF
 set_global_assignment -name STRATIX_DEVICE_IO_STANDARD "3.3-V LVCMOS"
 
 
-set_location_assignment PIN_Y2 -to clock
-set_location_assignment PIN_E21 -to io_led
-set_instance_assignment -name IO_STANDARD "2.5 V" -to io_led
 # KEY[0] is low avtive
 # set_location_assignment PIN_M23 -to reset
 # SW[0]
-set_location_assignment PIN_AB28 -to reset
 
 
-set_global_assignment -name LAST_QUARTUS_VERSION "16.1.0 Lite Edition"
+set_global_assignment -name LAST_QUARTUS_VERSION "18.1.0 Lite Edition"
 set_global_assignment -name RESERVE_ALL_UNUSED_PINS "AS INPUT TRI-STATED WITH WEAK PULL-UP"
 
 
+set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
+set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
+set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name VERILOG_FILE ../../VGADriver.v
+set_global_assignment -name VERILOG_FILE ../../verilog/vgadriver_top.v
+set_location_assignment PIN_A12 -to pixel_clock
+set_location_assignment PIN_C13 -to v_sync
+set_location_assignment PIN_C10 -to n_sync
+set_location_assignment PIN_F11 -to n_blank
+set_location_assignment PIN_G13 -to h_sync
+set_location_assignment PIN_E12 -to R[0]
+set_location_assignment PIN_E11 -to R[1]
+set_location_assignment PIN_D10 -to R[2]
+set_location_assignment PIN_F12 -to R[3]
+set_location_assignment PIN_G10 -to R[4]
+set_location_assignment PIN_J12 -to R[5]
+set_location_assignment PIN_H8 -to R[6]
+set_location_assignment PIN_H10 -to R[7]
+set_location_assignment PIN_G8 -to G[0]
+set_location_assignment PIN_G11 -to G[1]
+set_location_assignment PIN_F8 -to G[2]
+set_location_assignment PIN_H12 -to G[3]
+set_location_assignment PIN_C8 -to G[4]
+set_location_assignment PIN_B8 -to G[5]
+set_location_assignment PIN_F10 -to G[6]
+set_location_assignment PIN_C9 -to G[7]
+set_location_assignment PIN_B10 -to B[0]
+set_location_assignment PIN_A10 -to B[1]
+set_location_assignment PIN_C11 -to B[2]
+set_location_assignment PIN_B11 -to B[3]
+set_location_assignment PIN_A11 -to B[4]
+set_location_assignment PIN_C12 -to B[5]
+set_location_assignment PIN_D11 -to B[6]
+set_location_assignment PIN_D12 -to B[7]
+set_location_assignment PIN_Y2 -to clk
+set_global_assignment -name QIP_FILE pll.qip
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
